--- a/html/index.html
+++ b/html/index.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>element-starter</title>
+  <title>vue-starter</title>
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <router-view></router-view>
+  </div>
 </body>
 
 </html>
